argocd/aws/666628074417/clusters/cbioportal-prod/apps/slide-viewer-triage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slide-viewer-triage
  namespace: default
  labels:
    app: slide-viewer-triage
spec:
  type: ClusterIP
  selector:
    app: slide-viewer-triage
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
